--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,7 @@ qtcreator-*
 
 # Catkin custom files
 CATKIN_IGNORE
+Video Presentation/Pool Testing/RoboBoat2020_PoolTesting_4.m4v
+Video Presentation/Pool Testing/RoboBoat2020_PoolTesting_3.m4v
+Video Presentation/Pool Testing/RoboBoat2020_PoolTesting_2.m4v
+Video Presentation/Past Competitions/EStopTest.mp4
