--- a/.gitignore
+++ b/.gitignore
@@ -162,3 +162,4 @@ Video Presentation/Pool Testing/RoboBoat2020_PoolTesting_4.m4v
 Video Presentation/Pool Testing/RoboBoat2020_PoolTesting_3.m4v
 Video Presentation/Pool Testing/RoboBoat2020_PoolTesting_2.m4v
 Video Presentation/Past Competitions/EStopTest.mp4
+Video Presentation/Gazebo/RoboBoatGazebo.mp4
